# neopluto

./: .clang-format  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  accountswidget.cpp  accountswidget.h  accountwidget.cpp  accountwidget.h  balancewidget.cpp  balancewidget.h  database.cpp  database.h  entrydialog.cpp  entrydialog.h  entrytypebox.cpp  entrytypebox.h  entrywidget.cpp  entrywidget.h  main.cpp  mainwindow.cpp  mainwindow.h  newaccountwidget.cpp  newaccountwidget.h  readme.md  tagswidget.cpp  tagswidget.h  utils.h
